# sdf-dataset

./: CMakeLists.txt  LICENSE  README.md
include/sdf/: common.hpp  sdf.hpp
include/sdf/Animal/: Dinosaur.hpp  Elephant.hpp  Fish.hpp  Girl.hpp  HumanHead.hpp  HumanSkull.hpp  Jellyfish.hpp  MantaRay.hpp  PixarMike.hpp  Snail.hpp  Snake.hpp  Tardigrade.hpp
include/sdf/Fractal/: Julia.hpp  Mandelbulb.hpp  Menger.hpp  Serpinski.hpp
include/sdf/Geometry/: Bezier.hpp  Capsule.hpp  Cone.hpp  Cube.hpp  Cylinder.hpp  Dodecahedron.hpp  Helix.hpp  Hexprism.hpp  Icosahedron.hpp  Octabound.hpp  Octahedron.hpp  Pyramid.hpp  Roundbox.hpp  Sphere.hpp  Tetrahedron.hpp  Torus.hpp  Trefoil.hpp  Triangle.hpp  Triprismbound.hpp
include/sdf/Manufactured/: Cables.hpp  Castle.hpp  Chain.hpp  Gear.hpp  GrandPiano.hpp  Key.hpp  Knob.hpp  Mech.hpp  Mobius.hpp  Rooks.hpp  Spike.hpp  Teapot.hpp  Temple.hpp  UprightPiano.hpp  Vase.hpp
include/sdf/Misc/: Burger.hpp  Cheese.hpp  Dalek.hpp
include/sdf/Nature/: Mountain.hpp  Mushroom.hpp  Rock.hpp  Tree.hpp
include/sdf/Vehicle/: Boat.hpp  Cybertruck.hpp  Jetfighter.hpp  Lamborghini.hpp  Oldcar.hpp  TieFighter.hpp
src/: main.cpp  sdf.cpp
